# challenge-ze-delivery

./: .gitignore  README.md  docker-compose.yml  example.env  payload.json  pyproject.toml
src/: manage.py
src/stores/: filters.py  models.py  serializers.py  urls.py  views.py
src/stores/migrations/: 0001_initial.py
src/stores/tests/: helpers.py  test_views.py
src/ze_delivery_challenge/: asgi.py  settings.py  urls.py  wsgi.py
